added meta tag description

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8" />
         <title>Aditya Kumar</title>
-        <meta name="description" content="" />
+        <meta name="description" content="Aditya Kumar's Personal Portfolio" />
         <meta
             name="viewport"
             content="width=device-width, initial-scale=1, maximum-scale=1.0, user-scalable=no" />
