--- a/public_html/index.html
+++ b/public_html/index.html
@@ -134,7 +134,7 @@
                 <div class="emphasis">flexibility</div>
                 to explore sectors that I might wanna specialise in later.
                 <div class="note">
-                    <a href="files/ADITYA KUMAR 2023 RESUME.pdf" class="link"
+                    <a href="files/ADITYA KUMAR RESUME.pdf" class="link"
                         >Check out my resume for a list of stuff I know! ->
                     </a>
                 </div>
@@ -260,7 +260,7 @@
                 on any of my socials!
                 <div class="note">
                     Also, feel free to check out my
-                    <a class="link" href="files/ADITYA KUMAR 2023 RESUME.pdf"
+                    <a class="link" href="files/ADITYA KUMAR RESUME.pdf"
                         >resume</a
                     >
                     ! It is pretty informative and I try to keep it as updated
